--- a/BeamWallet/ViewControllers/Login/PhraseViewController/IntroPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/Login/PhraseViewController/IntroPhraseViewController.xib
@@ -148,7 +148,7 @@ Never save it in your local or remote folders in any form.</string>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Cyl-sg-GXv" firstAttribute="centerX" secondItem="8iw-Ag-QBa" secondAttribute="centerX" id="8wx-dD-FFb"/>
-                <constraint firstItem="Cyl-sg-GXv" firstAttribute="top" secondItem="NvB-WR-tc2" secondAttribute="top" constant="55" id="Ahq-0O-Ez0"/>
+                <constraint firstItem="Cyl-sg-GXv" firstAttribute="top" secondItem="8iw-Ag-QBa" secondAttribute="top" constant="55" id="Ahq-0O-Ez0"/>
                 <constraint firstItem="NvB-WR-tc2" firstAttribute="bottom" secondItem="lc2-JS-VP6" secondAttribute="bottom" constant="50" id="NfO-Mj-KRO"/>
                 <constraint firstItem="lc2-JS-VP6" firstAttribute="centerX" secondItem="8iw-Ag-QBa" secondAttribute="centerX" id="T7g-cE-X6A"/>
             </constraints>
