--- a/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
@@ -63,7 +63,7 @@
                     </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cGi-Xl-bTi" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="61" y="573" width="253" height="44"/>
+                    <rect key="frame" x="61" y="311.5" width="253" height="44"/>
                     <color key="backgroundColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="BQP-Bk-ceC"/>
@@ -90,10 +90,10 @@
             <constraints>
                 <constraint firstItem="0d0-i6-Ynk" firstAttribute="leading" secondItem="YNP-Jo-xdB" secondAttribute="leading" constant="20" id="CNU-SH-hCq"/>
                 <constraint firstItem="Mt6-bA-WTE" firstAttribute="top" secondItem="L6L-n6-lVw" secondAttribute="top" constant="120" id="CpP-Qc-XvX"/>
-                <constraint firstItem="YNP-Jo-xdB" firstAttribute="bottom" secondItem="cGi-Xl-bTi" secondAttribute="bottom" constant="50" id="Jae-nX-Thm"/>
                 <constraint firstItem="Mt6-bA-WTE" firstAttribute="leading" secondItem="YNP-Jo-xdB" secondAttribute="leading" constant="20" id="WEQ-9w-dZy"/>
                 <constraint firstItem="YNP-Jo-xdB" firstAttribute="trailing" secondItem="0d0-i6-Ynk" secondAttribute="trailing" constant="20" id="YRC-ec-fo8"/>
                 <constraint firstItem="cGi-Xl-bTi" firstAttribute="centerX" secondItem="L6L-n6-lVw" secondAttribute="centerX" id="Z6J-GT-zAS"/>
+                <constraint firstItem="cGi-Xl-bTi" firstAttribute="top" secondItem="0d0-i6-Ynk" secondAttribute="bottom" constant="100" id="mCd-Ij-XfF"/>
                 <constraint firstItem="0d0-i6-Ynk" firstAttribute="top" secondItem="Mt6-bA-WTE" secondAttribute="bottom" constant="50" id="tUu-dy-1o2"/>
                 <constraint firstItem="YNP-Jo-xdB" firstAttribute="trailing" secondItem="Mt6-bA-WTE" secondAttribute="trailing" constant="20" id="xAg-YI-Teq"/>
             </constraints>
