--- a/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletPasswordViewController.xib
@@ -19,6 +19,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateWalletPasswordViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="confirmPassField" destination="AQz-dp-S4r" id="iAn-8z-wqL"/>
+                <outlet property="constraintContentHeight" destination="ODu-J0-5Ue" id="LVm-Di-yjz"/>
                 <outlet property="passField" destination="7et-9b-4aA" id="rle-Mr-S5n"/>
                 <outlet property="passProgressView" destination="kAR-Ig-iOb" id="zM1-fw-1hJ"/>
                 <outlet property="saveButton" destination="seK-ui-jrF" id="N1x-Ou-sNo"/>
@@ -33,11 +34,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJh-QQ-Obr">
-                    <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" delaysContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJh-QQ-Obr">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dct-LB-tdu">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create new password to access your wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLc-86-sdM">
                                     <rect key="frame" x="15" y="0.0" width="345" height="19.5"/>
@@ -184,7 +185,7 @@
             <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="iJh-QQ-Obr" secondAttribute="trailing" id="BoC-LM-xec"/>
-                <constraint firstItem="iJh-QQ-Obr" firstAttribute="top" secondItem="zy8-tK-3Bs" secondAttribute="top" constant="50" id="DVt-CR-azk"/>
+                <constraint firstItem="iJh-QQ-Obr" firstAttribute="top" secondItem="EWz-n4-e9f" secondAttribute="top" id="DVt-CR-azk"/>
                 <constraint firstItem="Dct-LB-tdu" firstAttribute="height" secondItem="iJh-QQ-Obr" secondAttribute="height" priority="250" id="ODu-J0-5Ue"/>
                 <constraint firstItem="iJh-QQ-Obr" firstAttribute="leading" secondItem="EWz-n4-e9f" secondAttribute="leading" id="R0r-gr-9xh"/>
                 <constraint firstItem="Dct-LB-tdu" firstAttribute="width" secondItem="EWz-n4-e9f" secondAttribute="width" id="R7n-sX-FCA"/>
