--- a/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,16 +24,17 @@
                 <outlet property="stackWidth" destination="r1j-y8-kRz" id="BfW-vV-qtI"/>
                 <outlet property="topSpace" destination="K9J-Z0-sfQ" id="ueK-zw-Ekf"/>
                 <outlet property="touchIdButton" destination="xxN-ni-oL7" id="xBt-5V-2KF"/>
+                <outlet property="versionLabel" destination="Y96-aM-g7O" id="5jR-IP-ffN"/>
                 <outlet property="view" destination="sPr-XI-erP" id="dCm-mx-xBc"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="sPr-XI-erP">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="vUf-hW-nJa">
-                    <rect key="frame" x="30" y="114.5" width="315" height="358.5"/>
+                    <rect key="frame" x="49.5" y="229" width="315" height="358.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="F4r-MH-6cH">
                             <rect key="frame" x="22.5" y="0.0" width="270" height="129.5"/>
@@ -160,7 +158,7 @@
                     </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zrP-UG-JCV">
-                    <rect key="frame" x="61" y="573" width="253" height="44"/>
+                    <rect key="frame" x="80.5" y="768" width="253" height="44"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="B3J-cS-8aw"/>
@@ -182,13 +180,35 @@
                         <action selector="onChangeWalletWithSender:" destination="-1" eventType="touchUpInside" id="GTx-Kj-ONW"/>
                     </connections>
                 </button>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="arN-pW-LDy">
+                    <rect key="frame" x="257" y="64" width="137" height="30"/>
+                    <state key="normal" title="EXPORT DATABASE">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onExportWithSender:" destination="-1" eventType="touchUpInside" id="6GH-RK-GTJ"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y96-aM-g7O">
+                    <rect key="frame" x="179.5" y="837.5" width="55.5" height="14.5"/>
+                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUf-hW-nJa" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="DPW-k4-53i"/>
                 <constraint firstItem="vUf-hW-nJa" firstAttribute="centerY" secondItem="sPr-XI-erP" secondAttribute="centerY" constant="-40" id="K9J-Z0-sfQ"/>
+                <constraint firstItem="arN-pW-LDy" firstAttribute="top" secondItem="n6b-Qo-3zm" secondAttribute="top" constant="20" id="NhR-5l-dGk"/>
+                <constraint firstItem="n6b-Qo-3zm" firstAttribute="bottom" secondItem="Y96-aM-g7O" secondAttribute="bottom" constant="10" id="RTo-oQ-Mh3"/>
                 <constraint firstItem="n6b-Qo-3zm" firstAttribute="bottom" secondItem="zrP-UG-JCV" secondAttribute="bottom" constant="50" id="WNZ-0a-Qfr"/>
+                <constraint firstItem="Y96-aM-g7O" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="pG1-Gf-tWK"/>
                 <constraint firstItem="zrP-UG-JCV" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="qny-6k-l0F"/>
+                <constraint firstItem="n6b-Qo-3zm" firstAttribute="trailing" secondItem="arN-pW-LDy" secondAttribute="trailing" constant="20" id="wh6-Lm-D7W"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="n6b-Qo-3zm"/>
             <point key="canvasLocation" x="53.600000000000001" y="70.614692653673174"/>
@@ -198,6 +218,6 @@
         <image name="iconChange" width="16" height="16"/>
         <image name="iconTouchid" width="45" height="45"/>
         <image name="iconWalletSmall" width="16" height="16"/>
-        <image name="logo" width="159" height="142"/>
+        <image name="logo" width="158" height="142"/>
     </resources>
 </document>
