--- a/BeamWallet/ViewControllers/Login/OpenWalletProgressViewController.xib
+++ b/BeamWallet/ViewControllers/Login/OpenWalletProgressViewController.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,25 +26,26 @@
                 <outlet property="progressValueLabel" destination="ptl-BF-NdL" id="erB-PX-mi1"/>
                 <outlet property="progressView" destination="bZD-dB-5UV" id="whc-Ut-x2W"/>
                 <outlet property="restotingInfoLabel" destination="sOp-KF-vke" id="ErO-zE-KPf"/>
+                <outlet property="versionLabel" destination="GU4-Iw-o1B" id="dmu-k9-keu"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-fL-4oD">
-                    <rect key="frame" x="80.666666666666686" y="220.33333333333337" width="253" height="175.66666666666663"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-fL-4oD">
+                    <rect key="frame" x="52" y="300.5" width="310" height="175.5"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="tiL-BA-jJU">
-                            <rect key="frame" x="0.0" y="0.0" width="253" height="90"/>
+                            <rect key="frame" x="76" y="0.0" width="158" height="90"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="90" id="cWg-aA-m4p"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creating wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqN-A1-TIj">
-                            <rect key="frame" x="0.0" y="119.99999999999999" width="253" height="21.666666666666671"/>
+                            <rect key="frame" x="93.5" y="120" width="123.5" height="21.5"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="18"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -55,7 +55,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptl-BF-NdL">
-                            <rect key="frame" x="0.0" y="156.66666666666666" width="253" height="0.0"/>
+                            <rect key="frame" x="155" y="156.5" width="0.0" height="0.0"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                             <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -64,7 +64,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YX2-nC-HFt">
-                            <rect key="frame" x="0.0" y="171.66666666666666" width="253" height="4"/>
+                            <rect key="frame" x="28.5" y="171.5" width="253" height="4"/>
                             <subviews>
                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bZD-dB-5UV">
                                     <rect key="frame" x="-2" y="0.0" width="257" height="4"/>
@@ -84,6 +84,7 @@
                                 <constraint firstItem="bZD-dB-5UV" firstAttribute="leading" secondItem="YX2-nC-HFt" secondAttribute="leading" constant="-2" id="XQe-Oi-Kvv"/>
                                 <constraint firstItem="bZD-dB-5UV" firstAttribute="top" secondItem="YX2-nC-HFt" secondAttribute="top" id="YSP-mc-KWF"/>
                                 <constraint firstAttribute="bottom" secondItem="bZD-dB-5UV" secondAttribute="bottom" id="aQ3-th-vKN"/>
+                                <constraint firstAttribute="width" constant="253" id="pcf-ZR-tS7"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -92,7 +93,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzy-Nw-Qka">
-                            <rect key="frame" x="0.0" y="175.66666666666666" width="253" height="0.0"/>
+                            <rect key="frame" x="0.0" y="175.5" width="310" height="0.0"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
                             <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -101,7 +102,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOp-KF-vke">
-                            <rect key="frame" x="0.0" y="175.66666666666666" width="253" height="0.0"/>
+                            <rect key="frame" x="-86.5" y="175.5" width="483" height="0.0"/>
                             <string key="text">Only the wallet balance (UTXO) can be restored,  transaction info is always private
 and never kept in the blockchain.</string>
                             <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
@@ -114,11 +115,11 @@ and never kept in the blockchain.</string>
                         </label>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="width" constant="253" id="MHT-e1-b5z"/>
+                        <constraint firstAttribute="width" constant="310" id="MHT-e1-b5z"/>
                     </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FIX-uE-nue" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="80.666666666666686" y="642" width="253" height="44"/>
+                    <rect key="frame" x="80.5" y="738" width="253" height="44"/>
                     <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="253" id="2cz-1w-SJx"/>
@@ -140,12 +141,23 @@ and never kept in the blockchain.</string>
                         <action selector="onCancelWithSender:" destination="-1" eventType="touchUpInside" id="Icb-Gc-oIT"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GU4-Iw-o1B">
+                    <rect key="frame" x="179.5" y="837.5" width="55.5" height="14.5"/>
+                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="GU4-Iw-o1B" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="CPd-MX-fS5"/>
                 <constraint firstItem="FIX-uE-nue" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DDs-AX-uiW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="GU4-Iw-o1B" secondAttribute="bottom" constant="10" id="EgN-ef-QHS"/>
                 <constraint firstItem="Pob-fL-4oD" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-60" id="YDf-uM-xWZ"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FIX-uE-nue" secondAttribute="bottom" constant="50" id="bS7-Oc-rWf"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FIX-uE-nue" secondAttribute="bottom" constant="80" id="bS7-Oc-rWf"/>
                 <constraint firstItem="Pob-fL-4oD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tcF-90-2XT"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
