--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,11 +21,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nnP-fG-aiP" id="uMJ-Qs-zhc">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="64.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XUO-dl-aCG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="64.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOTAL AVAILABLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qE-nX-ICN">
                                 <rect key="frame" x="15" y="10" width="290" height="17"/>
@@ -86,7 +83,7 @@
                         <constraints>
                             <constraint firstItem="xSg-t8-b8s" firstAttribute="top" secondItem="8qE-nX-ICN" secondAttribute="bottom" constant="10" id="2L6-tz-Pfl"/>
                             <constraint firstItem="8qE-nX-ICN" firstAttribute="top" secondItem="XUO-dl-aCG" secondAttribute="top" constant="10" id="3TT-zO-tWO"/>
-                            <constraint firstAttribute="bottom" secondItem="xSg-t8-b8s" secondAttribute="bottom" constant="10.5" id="L6m-nO-X8U"/>
+                            <constraint firstAttribute="bottom" secondItem="xSg-t8-b8s" secondAttribute="bottom" constant="11" id="LQg-Eh-QJ0"/>
                             <constraint firstItem="6P6-9T-9EC" firstAttribute="centerY" secondItem="XUO-dl-aCG" secondAttribute="centerY" id="Ujn-5Y-DBh"/>
                             <constraint firstItem="8qE-nX-ICN" firstAttribute="leading" secondItem="XUO-dl-aCG" secondAttribute="leading" constant="15" id="eet-0Q-IQc"/>
                             <constraint firstAttribute="trailing" secondItem="6P6-9T-9EC" secondAttribute="trailing" constant="15" id="hqy-ZR-7Jl"/>
