--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
@@ -41,7 +41,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="2345.28273 BEAM" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xSg-t8-b8s">
-                                <rect key="frame" x="15" y="37" width="145" height="17"/>
+                                <rect key="frame" x="15" y="37" width="185" height="17"/>
                                 <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="14"/>
                                 <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -49,29 +49,21 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P6-9T-9EC" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                                <rect key="frame" x="180" y="14.5" width="125" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P6-9T-9EC" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
+                                <rect key="frame" x="220" y="18" width="100" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="gBI-OT-MC8"/>
+                                    <constraint firstAttribute="width" constant="100" id="gBI-OT-MC8"/>
                                     <constraint firstAttribute="height" constant="36" id="rGF-7y-A13"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="15" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="22" maxY="1"/>
                                 <state key="normal" title="send all" image="iconSendPink">
                                     <color key="titleColor" red="0.85490196080000003" green="0.40784313729999999" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="18"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                        <color key="value" red="0.85490196080000003" green="0.40784313729999999" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="add_all"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
@@ -84,9 +76,9 @@
                             <constraint firstItem="xSg-t8-b8s" firstAttribute="top" secondItem="8qE-nX-ICN" secondAttribute="bottom" constant="10" id="2L6-tz-Pfl"/>
                             <constraint firstItem="8qE-nX-ICN" firstAttribute="top" secondItem="XUO-dl-aCG" secondAttribute="top" constant="10" id="3TT-zO-tWO"/>
                             <constraint firstAttribute="bottom" secondItem="xSg-t8-b8s" secondAttribute="bottom" constant="11" id="LQg-Eh-QJ0"/>
-                            <constraint firstItem="6P6-9T-9EC" firstAttribute="centerY" secondItem="XUO-dl-aCG" secondAttribute="centerY" id="Ujn-5Y-DBh"/>
                             <constraint firstItem="8qE-nX-ICN" firstAttribute="leading" secondItem="XUO-dl-aCG" secondAttribute="leading" constant="15" id="eet-0Q-IQc"/>
-                            <constraint firstAttribute="trailing" secondItem="6P6-9T-9EC" secondAttribute="trailing" constant="15" id="hqy-ZR-7Jl"/>
+                            <constraint firstAttribute="trailing" secondItem="6P6-9T-9EC" secondAttribute="trailing" id="hqy-ZR-7Jl"/>
+                            <constraint firstAttribute="bottom" secondItem="6P6-9T-9EC" secondAttribute="bottom" constant="11" id="iES-cw-Sqj"/>
                             <constraint firstItem="xSg-t8-b8s" firstAttribute="leading" secondItem="XUO-dl-aCG" secondAttribute="leading" constant="15" id="jDK-9M-z91"/>
                             <constraint firstItem="6P6-9T-9EC" firstAttribute="leading" secondItem="xSg-t8-b8s" secondAttribute="trailing" constant="20" id="jxg-f5-ckI"/>
                             <constraint firstAttribute="trailing" secondItem="8qE-nX-ICN" secondAttribute="trailing" constant="15" id="kjB-jl-zDj"/>
